--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,5 @@ logging:
               ReactiveMongoRepository: DEBUG
             core:
               ReactiveMongoTemplate: DEBUG
+        web: DEBUG
+        security: DEBUG
