--- a/build.gradle
+++ b/build.gradle
@@ -24,42 +24,46 @@ repositories {
 }
 
 dependencies {
+	// Spring MongoDB Reactive
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
+	// Spring Webflux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	compileOnly 'org.projectlombok:lombok'
+	
+	// Spring Tools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+	
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.security:spring-security-test'
 	
 	// Log4j2
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-	// https://mvnrepository.com/artifact/com.lmax/disruptor
+	// Log4j2 Async dependency
 	implementation group: 'com.lmax', name: 'disruptor', version: '3.4.4'
 	
 	// Jasypt
-	// https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter
 	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
 	
 	// Apache Commons
-	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-	// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
 	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 	
 	// Argon2 dependency
-	// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
 	implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
 	
 	// Paseto for java
-	// https://mvnrepository.com/artifact/dev.paseto/jpaseto-api
 	implementation group: 'dev.paseto', name: 'jpaseto-api', version: '0.6.0'
-	// https://mvnrepository.com/artifact/dev.paseto/jpaseto-impl
 	implementation group: 'dev.paseto', name: 'jpaseto-impl', version: '0.6.0'
-	// https://mvnrepository.com/artifact/dev.paseto/jpaseto-jackson
 	implementation group: 'dev.paseto', name: 'jpaseto-jackson', version: '0.6.0'
 	
 }
