--- a/.github/workflows/gradleci.yml
+++ b/.github/workflows/gradleci.yml
@@ -4,7 +4,7 @@ name: Java CI with Gradle
 on:
   push:
     branches:
-      - main
+#      - main
       - develop
       - feature
       - hotfix
